# UCI_Calender_2024

./: .gitignore  README.md  app.py  button_holder.py  date_selection.py  main.py  main_window.py  mainwindow.py  map.html  message_box.py  pyproject.toml  qt_app.py  qt_app.spec  uci_calender_qt6.py  widgets.py  widgets_2.py
QT_lectures/: QCheckBox_QRadioButton.py  QList.py  QPushButton.py  QTabWidget.py  QTextEdit.py  Qlabel_Images.py  SizePolicies_stretches.py  main_window.py  message_box.py  rock_widget.py
Qt_Designer/: main_qt_designer.py  qt_designer.py  ui_widget.py  user_interface.py  widget.py  widget.ui
data/: uci_calender_2024.csv  uci_calender_2024_raw.csv
data_preprocessing/: data_preprocessing.ipynb
map/: map_example.qml  qt_map.py
selenium_webscraping/: mtbdata_calender.ipynb  xcodata_calender.ipynb
