[tool.poetry]
name = "uci-calender-2024-project"
version = "0.1.0"
description = ""
authors = ["larshubacher <lars.hubacher@bluewin.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.10.13"
python = ">=3.10.13,<3.13"
selenium = "^4.15.1"
ipykernel = "^6.26.0"
numpy = "1.25.0"
pandas = "1.3.3"
geopy = "^2.4.0"
nominatim = "^0.1"
pyqt6 = "^6.6.0"
pyside6 = "^6.6.0"
flask = "^3.0.0"
gunicorn = "^21.2.0"
opencv-python-headless = "^4.8.1.78"
folium = "^0.15.0"
pyinstaller = "^6.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
